@@ -13,7 +13,7 @@
   </div> <!-- banner -->
 
   <div id="topnav">
-  <a href="http://github.com/troydhanson/uthash">summary page</a> &gt;
+  <a href="http://github.com/troydhanson/uthash">GitHub page</a> &gt;
   uthash home <!-- http://troydhanson.github.com/uthash/ -->
 
   </div>
@@ -24,39 +24,32 @@
       <div id="nav">
 
         <h2>documentation</h2>
-        <div><a href="userguide.html">uthash</a> (<a href="userguide.html">html</a>) (<a href="userguide.pdf">pdf</a>)</div>
-
-        <h2>extras included</h2>
+        <div><a href="userguide.html">uthash</a></div>
         <div><a href="utlist.html">utlist</a></div>
         <div><a href="utarray.html">utarray</a></div>
         <div><a href="utstring.html">utstring</a></div>
 
-        <h2>download</h2>
-        <h3>Linux, BSD, Mac OSX, Solaris</h3>
-        <div>FIXME</div>
-        <h3>Windows</h3>
-        <div>FIXME</div>
+        <h2>activity</h2>
+        <div><a href="changelog.html">ChangeLog</a></div>
 
-        <h2>last release</h2>
-        <div>October, 2012</div>
-        <div><a href="ChangeLog.html">ChangeLog</a></div>
+        <h2>download</h2>
+        <h3>Linux, Windows, BSD, OS X</h3>
+        <div><a href=https://github.com/troydhanson/uthash/archive/master.zip>grab the zip file</a></div>
+        <div><a href=https://github.com/troydhanson/uthash>or clone from here</a></div>
 
         <h2>license</h2>
         <div><a href="license.html">BSD revised</a></div>
 
-        <h2>resources</h2>
-        <div><a href="http://troydhanson.wordpress.com/">updates</a> [<a href="http://troydhanson.wordpress.com/feed/">rss</a>]<img alt=" rss" src="rss.png"/></div>
-
-        <h2>other projects</h2>
-        <div><a href="http://tkhanson.net/">see tkhanson.net</a></div>
 
         <h2>developer</h2>
         <div>Troy D. Hanson</div>
-        <div>@troydhanson</div>
-        <div>tdh@tkhanson.net</div>
+        <div><a href="http://troydhanson.wordpress.com/">my blog</a><img src="rss.png"/></div>
+        <div><a href="http://tkhanson.net/">my projects</a></div>
+
+<a href="https://twitter.com/troydhanson" class="twitter-follow-button" data-show-count="false">Follow @troydhanson</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
       </div>
-
 
       <div id="main">
         Any C structure can be stored in a hash table using uthash. Just add a
@@ -121,7 +114,6 @@ void delete_user(struct my_struct *user) {
 
    <hr />
   <div id="footer">
-    <p>$Id: index.html 121 2012-04-28 thanson $</p>
   </div> <!-- footer -->
 
   </body>
