@@ -4,6 +4,7 @@ uthash ChangeLog
 Version 1.9.8 (2013-01-09)
 --------------------------
 * transitioned to GitHub
+* uthash has been downloaded 29,000+ times since 2006 on SourceForge
 
 Click to return to the link:index.html[uthash home page].
 
